# Python-Mathematical-Animation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
2d-anim/: main.py  pyproject.toml
2d-anim/notebooks/: Pole_polar_circle.ipynb
2d-anim/scripts/: basics_1_moving_point.py  basics_2_trailing_path.py  basics_3_moving_point_with_trail.py  basics_4_move_rotate_squares.py  basics_5_move_rotate_discs.py  plot_line6_amplitute_changing_sine_curve.py  plot_line7_rotating_sine_curve.py  q8_ex_xxii_loney.py  random_walk_2d_new.py  visualizing_norm.py
3d-anim/: main.py  pyproject.toml
3d-anim/notebooks/: multiple_point_rot.ipynb  multiple_point_rotation_2d_object.ipynb  object_with_faces.ipynb  rotating_3d_object.ipynb  translation_mul_obj.ipynb
3d-anim/scripts/: normal_3d_basic.py  object_rotation.py  rotating_camera.py
